--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png" alt="Foto de Gabriela Jantsch sorrindo usando uma blusa preta e de cabelo solto com um fundo branco e cinza">
+        <img src="assets/Avatar.png" alt="Foto de Gabriela Jantsch sorrindo usando uma blusa preta e de cabelo solto com um fundo branco e cinza">
         <p>@gabriela_jantsch</p>
       </div>
 
